--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
+    "babel-preset-es2015": "^6.13.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-copy": "0.0.2",
+    "gulp-babel": "^6.1.2",
     "gulp-load-plugins": "^1.1.0",
     "gulp-mini-css": "0.0.3",
     "gulp-rename": "^1.2.2",
